@@ -1,4 +1,5 @@
 0.10
+ - Add CHOROBA CPAN account.
  - Add 'readme_from' directive to Makefile.PL.
  - Update Module::Install to 1.08 version.
 
